applications/mas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mas
  labels:
    app: mas
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: mas
